--- a/src/app/shared/component/filter/filter-property/filter-property.component.scss
+++ b/src/app/shared/component/filter/filter-property/filter-property.component.scss
@@ -1,3 +1,5 @@
+:host { 
+
 .center-align {
   justify-content: space-between;
   > div {
@@ -17,20 +19,42 @@
   align-items: center;
 }
 
+// ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+//   border-radius: 30px !important;
+//   border: none !important;
+// }
+// ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+//   border-radius: 30px !important;
+//   border: none !important;
+// }
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+  border-radius: 0 20px 20px 0 !important;
+  flex-grow: 1 !important;
+}
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+  border-radius: 20px 0 0 20px !important;
+  flex-grow: 1 !important;
+}
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-  // color: blue;
-  // border-style: solid;
-  // border-width: 2px;
-  // background-color: aliceblue;
   background-color: rgb(241, 241, 241);
 }
 
 // Material Override PLACE TO STYLES
 
-::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
-::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+// ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+//   border-radius: 0px !important;
+// }
+// ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+//   border-radius: 0px !important;
+// }
 
-::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
-    transform: translateY(-1.1em) scale(.75);
-    width: 133.33333%;
+// ::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
+// ::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+
+// ::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+//     transform: translateY(-1.1em) scale(.75);
+//     width: 133.33333%;
+// }
+
 }
