--- a/src/app/modules/home/main-board/main-board.component.html
+++ b/src/app/modules/home/main-board/main-board.component.html
@@ -8,8 +8,11 @@
     </div>
     <div class="row container-row">
       <div *ngFor="let property of promotedProperties">
-        <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
-        </app-property-frame>
+        <div class="mr-5">
+          <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
+          </app-property-frame>
+        </div>
+
       </div>
     </div>
   </div>
@@ -21,9 +24,11 @@
       <div class="seemore">See more(1987)</div>
     </div>
     <div class="row container-row">
-      <div *ngFor="let property of promotedProperties">
-        <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
-        </app-property-frame>
+      <div *ngFor="let property of newListings">
+        <div class="mr-5">
+          <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
+          </app-property-frame>
+        </div>
       </div>
     </div>
   </div>
@@ -34,9 +39,11 @@
       <div class="title-all-listings">All Listings</div>
     </div>
     <div class="row container-row">
-      <div *ngFor="let property of promotedProperties">
-        <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
-        </app-property-frame>
+      <div *ngFor="let property of allListings">
+        <div class="mr-5">
+          <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
+          </app-property-frame>
+        </div>
       </div>
     </div>
   </div>
