--- a/src/app/modules/private/user-board/user-board.component.scss
+++ b/src/app/modules/private/user-board/user-board.component.scss
@@ -2,7 +2,13 @@
     margin-top: 2%;
 }
 
+.padding {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .title-personal-info {
+    margin-top: 10px;
     //margin-left: 15px;
     margin-bottom: 15px;
     font-weight: bold;
@@ -40,7 +46,7 @@
     height: 35px;
     background-color: red;
     color: white;
-    width: 100px;
+    width: 150px;
 }
 
 
@@ -61,6 +67,7 @@
 }
 
 .main-title {
+    margin-top: 20px;
     margin-bottom: 10px;
     margin-left: 15px;
     font-weight: bold;
@@ -77,7 +84,7 @@
 }
 
 .image {
-    margin-top: 10px;
+    //margin-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,6 +102,10 @@ mat-divider {
 
 .padding-left{
     padding-left: 15px;
+}
+
+.padding-left-delete {
+    padding-left: 10px;
 }
 
 .common-text{
