--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -4,13 +4,21 @@
   </div>
 </div>
 <div class="board-container">
-  <div class="left-container width-15">
+  <!--USER LIST-->
+  <div class="left-container width-15" *ngIf="user.Type === 1">
     <div class="button-wrapper">
       <button mat-raised-button color="primary" class="mat-button width-100">Messages</button>
     </div>
     <div class="button-wrapper">
       <button mat-raised-button color="primary" class="mat-button width-100" [routerLink]="['/my-listings']">My
         Listings</button>
+    </div>
+  </div>
+  <!--ADMIN LIST-->
+  <div class="left-container width-15" *ngIf="user.Type === 3">
+    <div class="button-wrapper">
+      <button mat-raised-button color="primary" class="mat-button width-100"
+        [routerLink]="['/admin-dashboard']">Dashboard</button>
     </div>
   </div>
   <div class="column width-70">
@@ -55,7 +63,7 @@
           </div>
         </div>
         <!--EDIT ADDRESS-->
-        
+
         <div class="main-title">Address</div>
         <div class="padding-left" *ngIf="!toogleAddress">
           <div class="row">
