--- a/src/app/modules/private/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/private/admin-dashboard/admin-dashboard.component.html
@@ -6,8 +6,50 @@
         </div>
     </div>
     <div class="column width-70">
-        <div>To Approve</div>
-        <div>Active</div>
-        <div>Blocked</div>
+        <div class="row row-margin background-filter full-height">
+            <div class=row>
+                <button class="button-approve" mat-raised-button (click)="onSubmit()">To Approve</button>
+                <button class="button-active" mat-raised-button>Active</button>
+                <button class="button-blocked" mat-raised-button>Blocked</button>
+            </div>
+
+            <div>
+                <div class="mat-elevation-z8">
+                    <table mat-table [dataSource]="dataSource">
+                        <!--Document Number-->
+                        <ng-container matColumnDef="mySqlId">
+                            <th mat-header-cell *matHeaderCellDef>Id</th>
+                            <td mat-cell *matCellDef="let properties">
+                                {{properties.mySqlId}}
+                            </td>
+                        </ng-container>
+                        <!--Document Type-->
+                        <ng-container matColumnDef="price">
+                            <th mat-header-cell *matHeaderCellDef>Price</th>
+                            <td mat-cell *matCellDef="let properties">
+                                {{properties.Price}}
+                            </td>
+                        </ng-container>
+                        <!--Delete Button-->
+                        <ng-container matColumnDef="deleteButton">
+                            <th mat-header-cell *matHeaderCellDef></th>
+                            <td mat-cell *matCellDef="let properties">
+                                <button mat-raised-button color="warn">Delete</button>
+                            </td>
+                        </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let properties; columns: displayedColumns;"></tr>
+                    </table>
+                    <!-- TOP ACTIONS AND PAGINATION -->
+                    <div>
+                        <mat-paginator #paginator [length]="length" [pageSize]="10" [pageSizeOptions]="[10,20,30]"
+                            (page)="pageChange($event)" [showFirstLastButtons]="true">
+                        </mat-paginator>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
     </div>
 </div>
